Bug:  PRD Reviewer:  Self Comments:  Changes for Filr integration.  {123rd} 1. Fixed some layout issues with the 'Shared by/with Me' string cells. 2. When in Filr only mode: a. Removed a couple of items from the Folder configuration menu    (Form/View Designer and Manage Templates.) b. Removed the 'Workspace' link from the profile page. c. Removed the 'Workspace' and 'Follow' links from the profile quick    view. d. Changed the GotoMyWorkspaceEvent handler to goto the profile page    instead of the workspace page.
Files:
M    web/docroot/WEB-INF/jsp/definition_elements/profile_GWT.jsp
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtMenuHelper.java
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtServerHelper.java
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtActivityStreamHelper.java
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtViewHelper.java
M    gwt/src/org/kablink/teaming/gwt/client/profile/widgets/GwtQuickViewDlg.java
M    gwt/src/org/kablink/teaming/gwt/client/profile/widgets/ProfileMainPanel.java
M    gwt/src/org/kablink/teaming/gwt/client/GwtMainPage.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
@@ -147,7 +147,7 @@
 		.vibe-dataTableAssignment-control         {}
 		.vibe-dataTableAssignment-disabled        {color: #c4c4c4;}
 		.vibe-dataTableAssignment-enabled         {color: #353838;}
-		.vibe-dataTableAssignment-image           {width: 25px;}
+		.vibe-dataTableAssignment-image           {height: 25px;}
 		.vibe-dataTableAssignment-label           {display: inline; font-weight: bold; padding-left: 2px !important;}
 		.vibe-dataTableAssignment-list            {}
 		.vibe-dataTableAssignment-panel           {white-space: nowrap;}
@@ -187,10 +187,10 @@
 		.vibe-dataTablePresence-label             {display: inline; font-weight: bold; padding-left: 2px !important;}
 		.vibe-dataTablePresence-disabled          {color: #c4c4c4;}
 		.vibe-dataTablePresence-enabled           {color: #353838;}
-		.vibe-dataTablePresence-image             {width: 25px;}
+		.vibe-dataTablePresence-image             {height: 25px;}
 		.vibe-dataTableShareStringValue-expired   {color: red; font-weight: bold;}
 		.vibe-dataTableShareStringValue-label     {white-space: nowrap;}
-		.vibe-dataTableShareStringValue-panel     {white-space: nowrap; height: 15px}
+		.vibe-dataTableShareStringValue-panel     {white-space: nowrap; height: 25px; margin-top: 6px;}
 		.vibe-dataTableTaskFolder-disabled        {color: #c4c4c4;}
 		.vibe-dataTableTaskFolder-enabled         {color: #353838;}
 		.vibe-dataTableTaskFolder-label           {display: inline; color: #135c8f;}
